# fanilab-smartcontract

./: .editorconfig  .gitattributes  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  Makefile.windows  PLAN.md  PRODUCTION_READINESS.md  README.md  SECURITY.md  SOROBAN_SDK_27_MIGRATION.md  codecov.yml  deny.toml  fani-smartcontract-issues.md  rustfmt.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security_vulnerability.md
.github/workflows/: ci.yml  deploy-testnet.yml  release.yml  security-audit.yml
contracts/delivery_contract/: lib.rs  test.rs
contracts/dispute_resolution_contract/: Cargo.toml  lib.rs  test.rs
contracts/escrow_contract/: Cargo.toml  lib.rs  test.rs
contracts/fleet_management_contract/: Cargo.toml  lib.rs  test.rs
contracts/identity_reputation_contract/: Cargo.toml  lib.rs  test.rs
contracts/settlement_contract/: Cargo.toml  lib.rs
contracts/settlement_contract/src/: lib.rs
contracts/shared_types/: lib.rs
docs/: API.md  ARCHITECTURE_DECISION_RECORDS.md  DEPLOYMENT.md  GOVERNANCE.md  MONITORING.md  PERFORMANCE.md  SECURITY_AUDIT.md  TESTING.md  UPGRADE_GUIDE.md
docs/architecture/: event-system.md  smart-contract-architecture.md
scripts/: deploy-all-contracts.sh  initialize-all-contracts.sh
