[package]
name = "dispute_resolution_contract"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }
delivery_contract = { path = "../delivery_contract" }
escrow_contract = { path = "../escrow_contract" }
identity_reputation_contract = { path = "../identity_reputation_contract" }
shared_types = { path = "../shared_types" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
