[package]
name = "escrow_contract"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }
shared_types = { path = "../shared_types" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
